# extra-model

./: .bandit  .dockerignore  .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  README.md  SECURITY.md  Untitled  docker-compose.yaml  index.html  mkdocs.yml  publish_documentation.sh  pytest.ini  requirements-test.txt  requirements.txt  setup.cfg  setup.py
.github/: codecov.yml
.github/actions/install-dependencies/: action.sh
.github/actions/install-omw-1.4/: action.sh  action.yml
.github/actions/install-spacy-lang/: action.sh  action.yml
.github/actions/verify-wheel/: action.sh  action.yml
.github/workflows/: main.yml  publish_release.yml
docker/: Dockerfile  run_tests.sh
docs/: blog.md  custom_base_class.md  documentation.md  index.md  ram_requirements.md  reference.md  running_extra.md  workflow.md
docs/contributing/: developer_guide.md  documentation.md  publish_release.md
docs/examples/: README.md  examples.md
docs/examples/code/: basic_output_for_extra-model.Rmd  basic_output_for_extra-model.html  extra_model_inside_python.ipynb  restaurant_report_example.md
docs/examples/data/: restaurants_1000_comments.csv  wood_toy_example_result.csv
embeddings/: README.md
examples/code/: basic_output_for_extra-model.Rmd  basic_output_for_extra-model.html
examples/data/: restaurants_1000_comments_result.csv  tripadvisor_10hotels.csv  tripadvisor_10hotels_result.csv  wood_toy_example.csv
extra_model/: __init__.py  _adjectives.py  _aspects.py  _cli.py  _disambiguate.py  _errors.py  _filter.py  _models.py  _run.py  _setup.py  _summarize.py  _topics.py  _vectorizer.py
io/: .gitignore  README.md
site/: 404.html  index.html  objects.inv  sitemap.xml
site/blog/: index.html
site/contributing/developer_guide/: index.html
site/contributing/documentation/: index.html
site/contributing/publish_release/: index.html
site/custom_base_class/: index.html
site/documentation/: index.html
site/examples/: index.html
site/examples/code/restaurant_report_example/: index.html
site/examples/examples/: index.html
site/ram_requirements/: index.html
site/reference/: index.html
site/running_extra/: index.html
site/workflow/: index.html
tests/: test_adjectives.py  test_aspects.py  test_cli.py  test_disambiguate.py  test_example.py  test_filter.py  test_init.py  test_models.py  test_run.py  test_setup.py  test_summarize.py  test_topics.py  test_vectorizer.py
tests/resources/: 100_comments.csv  test_adjectives.vec  test_disambiguate.vec  test_topics.vec
