[metadata]
name = extra-model
version = attr: extra_model.__version__
url = https://github.com/wayfair-incubator/extra-model
author = Misha Balyasin
author_email = mbalyasin@wayfair.com
description = Code to run the Extra algorithm for unsupervised topic extraction.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]

python_requires ~=3.8,<3.9
install_requires =
    numpy==1.21.2
    nltk==3.6.5
    scikit-learn==1.0
    vaderSentiment==3.3.2
    pandas==1.3.4
    pycld3==0.22
    networkx==2.6.3
    gensim==4.1.2
    spacy==3.1.3
    requests==2.26.0
packages = find:

[options.package_data]
extra_model = py.typed

[options.packages.find]
exclude = "*.tests", "*.tests.*", "tests.*", "tests"

[options.entry_points]
console_scripts =
    extra-model = extra_model._cli:entrypoint
    extra-model-setup = extra_model._cli:entrypoint_setup
