[metadata]
name = extra-model
version = attr: extra_model.__version__
url = https://github.com/wayfair-incubator/extra-model
author = Misha Balyasin
author_email = mbalyasin@wayfair.com
description = Code to run the Extra algorithm for unsupervised topic extraction.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]

python_requires >=3.8,<3.10
install_requires =
    click==8.0.4
    numpy==1.22.3
    nltk==3.7
    scikit-learn==1.0.2
    vaderSentiment==3.3.2
    pandas==1.4.2
    pycld3==0.22
    networkx==2.7.1
    gensim==4.1.2
    spacy==3.2.4
packages = find:

[options.package_data]
extra_model = py.typed

[options.packages.find]
exclude = "*.tests", "*.tests.*", "tests.*", "tests"

[options.entry_points]
console_scripts =
    extra-model = extra_model._cli:entrypoint
    extra-model-setup = extra_model._cli:entrypoint_setup

[bumpversion]
current_version = 0.3.0
commit = True
tag = True

[bumpversion:file:extra_model/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bumpversion:file:tests/test_init.py]
search = __version__ == "{current_version}"
replace = __version__ == "{new_version}"
