[metadata]
name = extra-model
version = attr: extra_model.__version__
url = https://github.com/wayfair-incubator/extra-model
author = Misha Balyasin
author_email = mbalyasin@wayfair.com
description = Code to run the Extra algorithm for unsupervised topic extraction.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]

python_requires >=3.8,<3.10
install_requires =
    click==8.1.3
    numpy==1.23.4
    nltk==3.7
    scikit-learn==1.1.3
    vaderSentiment==3.3.2
    pandas==1.5.1
    langdetect==1.0.9
    networkx==2.8.8
    gensim==4.2.0
    scipy==1.9.3
    spacy==3.4.2
packages = find:

[options.package_data]
extra_model = py.typed

[options.packages.find]
exclude = "*.tests", "*.tests.*", "tests.*", "tests"

[options.entry_points]
console_scripts =
    extra-model = extra_model._cli:entrypoint
    extra-model-setup = extra_model._cli:entrypoint_setup

[bumpversion]
current_version = 0.4.0
commit = True
tag = True

[bumpversion:file:extra_model/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bumpversion:file:tests/test_init.py]
search = __version__ == "{current_version}"
replace = __version__ == "{new_version}"
